# llm-reliability

./: CLAUDE.md  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: load_hellaswag.py  load_mmlu.py  load_truthfulqa.py  run_adversarial.py  run_calibration_comparison.py  run_drift_baseline.py  run_idea4_full.py
src/llm_reliability/: __init__.py  adapters.py  adversarial.py  calibration.py  cli.py  drift.py  report.py
tests/: test_adapters.py  test_adversarial.py  test_blackbox_calibration.py  test_calibration.py  test_drift.py  test_report.py
