[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-reliability"
version = "0.0.1"
description = "Calibration, drift detection, and adversarial robustness for LLMs in production"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
calibration = ["scikit-learn>=1.4"]
drift = ["sentence-transformers>=3.0", "scikit-learn>=1.4"]
adversarial = ["sentence-transformers>=3.0"]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
llm-reliability = "llm_reliability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
